--- a/app/scss/components/_components.advantages.scss
+++ b/app/scss/components/_components.advantages.scss
@@ -4,6 +4,8 @@
 
 .advantages {
   padding: 40px 0;
+  position: relative;
+  z-index: 20;
 
   @include mq(md) {
     padding: 0 0 43px;
@@ -14,40 +16,42 @@
     margin: 0 auto 42px;
   }
 
-  .advantages__content {
+  &__content {
     box-sizing: border-box;
-    padding: 0 90px;
     display: flex;
     justify-content: space-between;
+    padding: 0 90px;
 
-    @include mq(lg) {
-      padding: 0 45px;
+    @include mq(xl) {
+      padding: 0 50px;
     }
 
-    @include mq(md) {
+    @include mq(lg) {
       padding: 0;
     }
 
     @include mq(s) {
       flex-wrap: wrap;
-      max-width: 540px;
-      margin: 0 auto;
     }
 
     &-block {
-      background: transparent;
-      width: 180px;
-      height: 195px;
-      perspective: 1000px;
+      box-sizing: border-box;
+      width: 18%;
+      max-width: 180px;
+      padding: 27px 12px 15px;
+      background: $white;
+      box-shadow: $drop-shadow2;
+      border-radius: 10px;
+      text-align: center;
+      position: relative;
 
-      @include mq(md) {
+      @include mq(lg) {
         width: 24%;
-        height: auto;
-        perspective: none;
       }
 
       @include mq(s) {
         width: 48%;
+        max-width: 100%;
         margin-bottom: 30px;
       }
 
@@ -57,86 +61,52 @@
         margin: 0 auto 30px;
       }
 
-      &__inner {
-        position: relative;
+      p {
+        color: $dark-violet;
+        margin-top: 10px;
+      }
+
+      &:before, &:after {
+        content: "";
+        display: block;
+        position: absolute;
+
+        @include mq(xl) {
+          display: none;
+        }
+      }
+
+      &:before {
         width: 100%;
         height: 100%;
-        text-align: center;
-        transition: transform 0.8s;
-        transform-style: preserve-3d;
+        background: $green;
+        top: 0;
+        left: 0;
+        border-radius: inherit;
+        transition: all 0.5s ease-in-out;
+      }
 
-        @include mq(md) {
-          transition: none;
-          transform-style: initial;
+      &:after {
+        width: 80px;
+        height: 80px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        transition: all 0.4s ease-in-out;
+      }
+
+      &:first-child {
+
+        &:after {
+          height: 81px;
+          background: url("../img/advantages/1.png") no-repeat center/cover;
         }
+      }
 
-        &-front, &-back {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          backface-visibility: hidden;
-          box-shadow: $drop-shadow2;
-          border-radius: 10px;
+      &:nth-child(2) {
 
-          @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-            backface-visibility: visible;
-          }
-
-          @include mq(md) {
-            position: static;
-            backface-visibility: visible;
-          }
-        }
-
-        &-front {
-          background: $green;
-
-          @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-            opacity: 1;
-            transition: all 0.5s ease-in-out;
-          }
-
-          @include mq(md) {
-            display: none;
-          }
-
-          svg {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-          }
-        }
-
-        &-back {
-          box-sizing: border-box;
-          padding: 27px 12px 15px;
-          background: $white;
-          transform: rotateY(180deg);
-
-          @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-            transform: rotateY(0deg);
-            opacity: 0;
-            transition: all 0.75s ease-in-out;
-          }
-
-          @include mq(md) {
-            transform: none;
-            padding-bottom: 18px;
-          }
-
-          svg {
-
-            path {
-              fill: $green;
-            }
-          }
-
-          p {
-            text-align: center;
-            color: $dark-violet;
-            margin-top: 10px;
-          }
+        &:after {
+          background: url("../img/advantages/2.png") no-repeat center/cover;
         }
       }
 
@@ -149,6 +119,10 @@
         @include mq(xs) {
           margin-bottom: 30px;
         }
+
+        &:after {
+          background: url("../img/advantages/3.png") no-repeat center/cover;
+        }
       }
 
       &:last-child {
@@ -156,38 +130,20 @@
         @include mq(s) {
           margin-bottom: 0;
         }
+
+        &:after {
+          background: url("../img/advantages/4.png") no-repeat center/cover;
+        }
       }
 
       &:hover {
 
-        .advantages__content-block__inner {
-          transform: rotateY(180deg);
+        &:before {
+          height: 0;
+        }
 
-          @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-            transform: rotateY(0deg);
-          }
-
-          @include mq(md) {
-            transform: none;
-          }
-
-          &-front {
-
-            @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-              opacity: 0;
-            }
-
-            svg {
-              opacity: 0;
-            }
-          }
-
-          &-back {
-
-            @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-              opacity: 1;
-            }
-          }
+        &:after {
+          opacity: 0;
         }
       }
     }
