--- a/app/scss/components/_components.catalog.scss
+++ b/app/scss/components/_components.catalog.scss
@@ -73,12 +73,16 @@
       }
 
       &__rating {
+        width: 122px;
+        height: 18px;
         position: absolute;
         top: 23px;
         right: 20px;
 
         @include mq(s) {
-          position: static;
+          position: relative;
+          top: 0;
+          left: 0;
           text-align: center;
           margin-bottom: 10.83px;
         }
@@ -87,13 +91,32 @@
           text-align: left;
         }
 
-        svg {
+        .empty {
+          width: 100%;
+          height: 100%;
+          background: url("../img/catalog/star-empty.png") no-repeat center/cover;
+          position: absolute;
+          top: 0;
+          left: 0;
+        }
 
-          &:last-child {
+        .full {
+          position: absolute;
+          width: 96px;
+          height: 100%;
+          top: 0;
+          left: 0;
+          overflow: hidden;
 
-            path {
-              fill: $grey;
-            }
+          &:before {
+            content: "";
+            display: block;
+            width: 122px;
+            height: 18px;
+            background: url("../img/catalog/star-full.png") no-repeat center/cover;
+            position: absolute;
+            top: 0;
+            left: 0;
           }
         }
       }
@@ -446,14 +469,8 @@
 
         &__rating {
 
-          svg {
-
-            &:last-child {
-
-              path {
-                fill: $orange;
-              }
-            }
+          .full {
+            width: 100%;
           }
         }
 
